oxidite-macros/tests/ui/fail_missing_id.rs
#[derive(oxidite_macros::Model)]
struct Bad {
    email: String,
}

fn main() {}
